--- a/Vidly/Views/Customers/Details.cshtml
+++ b/Vidly/Views/Customers/Details.cshtml
@@ -5,3 +5,13 @@
 }
 
 <h2>@Model.Name</h2>
+<div>
+    <label>Membership Type: </label>
+    <label>@Model.MembershipType.Name</label>
+</div>
+<div>
+    @if (Model.Birthdate != null) {
+        <label>Birthdate: </label>
+        <label>@Model.Birthdate</label>
+    }
+</div>
