--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -14,6 +14,7 @@
         <thead>
             <tr>
                 <th scope="col">Customer</th>
+                <th scope="col">Membership Type</th>
             </tr>
         </thead>
         <tbody>
@@ -21,6 +22,7 @@
             @foreach (var customer in Model.Customers) {
                 <tr>
                     <td scope="row">@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)</td>
+                    <td scope="row">@customer.MembershipType.Name</td>    
                 </tr>
             }
 
