--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -15,6 +15,7 @@
             <tr>
                 <th scope="col">Customer</th>
                 <th scope="col">Membership Type</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -22,7 +23,17 @@
             @foreach (var customer in Model.Customers) {
                 <tr>
                     <td scope="row">@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)</td>
-                    <td scope="row">@customer.MembershipType.Name</td>    
+                    <td scope="row">@customer.MembershipType.Name</td>
+                    <td scope="row">
+                        <div class="btn-group btn-group-toggle">
+                            <a href="@Url.Action("Edit", "Customers", new { id = customer.Id }, null)" class="btn btn-outline-primary btn-sm">
+                                <i class="fa fa-edit" style="font-size: 12px;"></i>
+                            </a>
+                            <a href="@Url.Action("Delete", "Customers", new { id = customer.Id }, null)" class="btn btn-outline-danger btn-sm">
+                                <i class="fa fa-trash" style="font-size: 12px;"></i>
+                            </a>
+                        </div>
+                    </td>
                 </tr>
             }
 
