Finalisando formulario de movies

--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -6,7 +6,9 @@
 }
 
 <h2>Customers</h2>
+<a href="@Url.Action("New", "Customers")" class="btn btn-primary">New</a>
 
+<br />
 <br />
 
 @if (Model.Customers.Count > 0) {
