--- a/Vidly/Views/Customers/Form.cshtml
+++ b/Vidly/Views/Customers/Form.cshtml
@@ -4,16 +4,21 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>New Customer</h2>
+@if (Model.Customer.Id == 0) {
+    <h2>New Customer</h2>
+} else {
+    <h2>Edit Customer</h2>
+}
 
-@using (Html.BeginForm("Create", "Customers")) {
+
+@using (Html.BeginForm("Save", "Customers")) {
     <div class="form-group">
         @Html.LabelFor(c => c.Customer.Name)
         @Html.TextBoxFor(c => c.Customer.Name, new { @class = "form-control" })
     </div>
     <div class="form-group">
         @Html.LabelFor(c => c.Customer.Birthdate)
-        @Html.TextBoxFor(c => c.Customer.Birthdate, new { @class = "form-control" })
+        @Html.TextBoxFor(c => c.Customer.Birthdate, "{0:d MM yyyy}", new { @class = "form-control" })
     </div>
     <div class="form-group">
         @Html.LabelFor(c => c.Customer.MembershipTypeId)
@@ -25,5 +30,6 @@
         </label>
     </div>
     <br />
+    @Html.HiddenFor(c => c.Customer.Id)
     <button class="btn btn-primary" type="submit">Save</button>
 }
