--- a/Vidly/Views/Home/Index.cshtml
+++ b/Vidly/Views/Home/Index.cshtml
@@ -5,5 +5,5 @@
 <div class="jumbotron">
     <h1>Welcome!</h1>
     <p class="lead">The Complete ASP.NET MVC 5.</p>
-    <p><a href="https://indra.udemy.com/course/the-complete-aspnet-mvc-5-course/" class="btn btn-outline-primary btn-lg">Course &raquo;</a></p>
+    <p><a href="https://indra.udemy.com/course/the-complete-aspnet-mvc-5-course/" target="_blank" class="btn btn-outline-primary btn-lg">Course &raquo;</a></p>
 </div>
