--- a/Vidly/Views/Customers/Form.cshtml
+++ b/Vidly/Views/Customers/Form.cshtml
@@ -15,14 +15,17 @@
     <div class="form-group">
         @Html.LabelFor(c => c.Customer.Name)
         @Html.TextBoxFor(c => c.Customer.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.Customer.Name)
     </div>
     <div class="form-group">
         @Html.LabelFor(c => c.Customer.Birthdate)
         @Html.TextBoxFor(c => c.Customer.Birthdate, "{0:d MM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.Customer.Birthdate)
     </div>
     <div class="form-group">
         @Html.LabelFor(c => c.Customer.MembershipTypeId)
         @Html.DropDownListFor(c => c.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "--Select--", new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.Customer.MembershipTypeId)
     </div>
     <div class="checkbox">
         <label>
