--- a/Vidly/Views/Customers/Form.cshtml
+++ b/Vidly/Views/Customers/Form.cshtml
@@ -12,20 +12,24 @@
 
 
 @using (Html.BeginForm("Save", "Customers")) {
+
+    <!-- Exibe os erros de validação -->
+    @Html.ValidationSummary(true, "Please fix the following errors")
+
     <div class="form-group">
         @Html.LabelFor(c => c.Customer.Name)
         @Html.TextBoxFor(c => c.Customer.Name, new { @class = "form-control" })
         @Html.ValidationMessageFor(c => c.Customer.Name)
     </div>
     <div class="form-group">
-        @Html.LabelFor(c => c.Customer.Birthdate)
-        @Html.TextBoxFor(c => c.Customer.Birthdate, "{0:d MM yyyy}", new { @class = "form-control" })
-        @Html.ValidationMessageFor(c => c.Customer.Birthdate)
-    </div>
-    <div class="form-group">
         @Html.LabelFor(c => c.Customer.MembershipTypeId)
         @Html.DropDownListFor(c => c.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "--Select--", new { @class = "form-control" })
         @Html.ValidationMessageFor(c => c.Customer.MembershipTypeId)
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(c => c.Customer.Birthdate)
+        @Html.TextBoxFor(c => c.Customer.Birthdate, "{0:d MM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.Customer.Birthdate)
     </div>
     <div class="checkbox">
         <label>
@@ -34,5 +38,12 @@
     </div>
     <br />
     @Html.HiddenFor(c => c.Customer.Id)
+    
+    <!-- Cria um token de seguança. Quando o usuário envia uma requisição ele compara o token vindo do form com o do cookie -->
+    @Html.AntiForgeryToken()
     <button class="btn btn-primary" type="submit">Save</button>
+}
+
+@section scripts {
+    @Scripts.Render("~/bundles/jqueryval")    
 }
