--- a/Vidly/Views/Movies/Form.cshtml
+++ b/Vidly/Views/Movies/Form.cshtml
@@ -4,32 +4,40 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@if (Model.Movie.Id == 0) {
+@if (Model.Id == 0) {
     <h2>New Movie</h2>
 } else {
     <h2>Edit Movie</h2>
 }
 
-<br />
-
 @using (Html.BeginForm("Save", "Movies")) {
+    @Html.ValidationSummary()
     <div class="form-group">
-        @Html.LabelFor(c => c.Movie.Name)
-        @Html.TextBoxFor(c => c.Movie.Name, new { @class = "form-control" })
+        @Html.LabelFor(c => c.Name)
+        @Html.TextBoxFor(c => c.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.Name)
     </div>
     <div class="form-group">
-        @Html.LabelFor(c => c.Movie.ReleaseDate)
-        @Html.TextBoxFor(c => c.Movie.ReleaseDate, "{0:d MM yyyy}", new { @class = "form-control" })
+        @Html.LabelFor(c => c.ReleaseDate)
+        @Html.TextBoxFor(c => c.ReleaseDate, "{0:d MM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.ReleaseDate)
     </div>
     <div class="form-group">
-        @Html.LabelFor(c => c.Movie.GenreId)
-        @Html.DropDownListFor(c => c.Movie.GenreId, new SelectList(Model.Genres, "Id", "Name"), "--Select--", new { @class = "form-control" })
+        @Html.LabelFor(c => c.GenreId)
+        @Html.DropDownListFor(c => c.GenreId, new SelectList(Model.Genres, "Id", "Name"), "--Select--", new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.GenreId)
     </div>
     <div class="form-group">
-        @Html.LabelFor(c => c.Movie.NumberInStock)
-        @Html.TextBoxFor(c => c.Movie.NumberInStock, new { @class = "form-control" })
+        @Html.LabelFor(c => c.NumberInStock)
+        @Html.TextBoxFor(c => c.NumberInStock, new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.NumberInStock)
     </div>
     <br />
-    @Html.HiddenFor(c => c.Movie.Id)
+    @Html.HiddenFor(c => c.Id)
+    @Html.AntiForgeryToken()
     <button class="btn btn-primary" type="submit">Save</button>
+}
+
+@section scripts {
+    @Scripts.Render("~/bundles/jqueryval")
 }
